# backend-ii

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
aula01/: challenge.py  exercise.py  tutorial.py
aula02/design_patterns_api/: Makefile  observer_pattern.py  pyproject.toml
aula02/design_patterns_api/src/design_patterns_api/: api.py  payments.py
aula03/design_patterns_api/: Makefile  observer_pattern.py  pyproject.toml
aula05/design_patterns_main/: Makefile  pyproject.toml
aula06/: advanced_async_patterns.py  challenge_rate_limiter.py  exercise_timeout.py
aula07/: challenge_logging_rotation.py  exercise_logging_levels.py  logging_basics.py
aula08/: test_challenge_factorial.py  test_exercise_multiply.py
concurrency_overview/: .gitignore  Makefile  compose.yml  db.py  pyproject.toml
concurrency_overview/src/api/: base.py  logging.py  run.py  settings.py
concurrency_overview/src/importer/: run.py
concurrency_overview/src/reporter/: run.py
django_recap/: Dockerfile  Makefile  compose.yml  manage.py  pyproject.toml
django_recap/django_recap/: asgi.py  settings.py  urls.py  wsgi.py
django_recap/todo/: admin.py  models.py  tests.py
django_recap/todo/migrations/: 0001_initial.py
project/: Makefile  README.md  docker-compose.yml  pyproject.toml
project/.github/workflows/: ci.yml
project/ai_agents/: agents.py  urls.py  views.py
project/ai_agents/templates/ai_agents/: event_analysis.html  event_optimization.html  recommendations.html
project/api/: admin.py  models.py  serializers.py  urls.py
project/api/migrations/: 0001_initial.py
project/api/tests/: test_ai_integration.py  test_auth.py  test_events.py  test_registration.py
project/api/views/: __init__.py  ai.py  auth.py  events.py
project/backend/: settings.py  urls.py
project/frontend/: forms.py  models.py  urls.py  views.py
project/frontend/migrations/: 0001_initial.py
project/frontend/static/css/: style.css
project/frontend/templates/: base.html
project/frontend/templates/auth/: login.html
project/frontend/templates/events/: create.html  detail.html  list.html  my_events.html  update.html
project/templates/: base.html
project/templates/ai/: event_analysis.html  event_optimization.html  recommendations.html
project/templates/auth/: login.html  register.html
project/templates/events/: detail.html  list.html
session12/: Client.py  Server.py  cube.proto  cube_pb2.py  cube_pb2_grpc.py
session13/: Makefile  docker-compose.yml  pyproject.toml
session13/django_project/: Dockerfile
session13/django_project/django_project/: settings.py  urls.py
session13/django_project/hello/: views.py
session13/fastapi_app/: Dockerfile  main.py  pyproject.toml
session16/: main.py
(+3 files in other folders)
