[project]
name = "event-management-system"
version = "0.1.0"
description = "AI-powered event management system"
dependencies = [
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
    "python-dotenv>=1.0.0",
    "crewai>=0.11.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "dj-database-url>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "whitenoise>=6.6.0",
    "gunicorn>=21.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"] 