[project]
name = "session13"
version = "0.1.0"
description = ""
authors = [
    {name = "ricardoAlmeidaEtic",email = "ricardo_almeida@eticalgarve.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
